# HastyRadical

./: CMakeLists.txt  CMakePresets.json  gamma_isomorphism.py  plot_statistics.py  sagegen_parallel.py
gencopies/: gamma_10_generators.txt  gamma_13_generators.txt  gamma_15_generators.txt  gamma_18_generators.txt  gamma_21_generators.txt  gamma_25_generators.txt  gamma_29_generators.txt  gamma_37_generators.txt  gamma_44_generators.txt  gamma_49_generators.txt  gamma_50_generators.txt  gamma_51_generators.txt  gamma_53_generators.txt  gamma_54_generators.txt  gamma_55_generators.txt  gamma_57_generators.txt  gamma_58_generators.txt  gamma_59_generators.txt  gamma_66_generators.txt  gamma_69_generators.txt  gamma_74_generators.txt  gamma_75_generators.txt  gamma_76_generators.txt  gamma_77_generators.txt  gamma_7_generators.txt  gamma_80_generators.txt  gamma_85_generators copy.txt  gamma_86_generators copy.txt  gamma_87_generators.txt  gamma_88_generators.txt  gamma_91_generators.txt  gamma_95_generators.txt  gamma_98_generators.txt  gamma_9_generators.txt  main.cpp
generators/: gamma_11_generators.txt  gamma_14_generators.txt  gamma_16_generators.txt  gamma_1_generators.txt  gamma_20_generators.txt  gamma_26_generators.txt  gamma_2_generators.txt  gamma_31_generators.txt  gamma_33_generators.txt  gamma_34_generators.txt  gamma_38_generators.txt  gamma_39_generators.txt  gamma_3_generators.txt  gamma_41_generators.txt  gamma_42_generators.txt  gamma_43_generators.txt  gamma_45_generators.txt  gamma_47_generators.txt  gamma_48_generators.txt  gamma_52_generators.txt  (+17 more)
(+170 files in other folders)
